@@ -5,7 +5,8 @@ Changes
 0.2.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- If no extension modules or entry points are defined in the setup.cfg, don't
+  clobber any extension modules/entry points that may be defined in setup.py.
 
 
 0.2.6 (2012-02-17)
